# lumi

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  TECH_STACK.md  cloudbuild.yaml  pyproject.toml  threat_model.md
.semgrep/: rules.yaml
app/: __init__.py  fast_api_app.py  orchestrator.py  ranking.py  routing.py
app/agents/: __init__.py  _tool_filters.py  agent.py  l1_identity.py  l2_eligibility.py  l3_level.py  l4_timeline.py  l5_synthesizer.py  schemas.py
app/mcp_servers/: __init__.py
app/mcp_servers/resource_catalog/: __main__.py  catalog_loader.py  schemas.py  server.py
app/mcp_servers/web_search/: __init__.py  __main__.py  curated_index.json  provider.py  schemas.py  server.py
deploy/: README.md  deploy.sh
resources/: catalog.json
scripts/: reprobes.py
scripts/pre_commit_hooks/: lumi_guard.py
tests/: conftest.py
tests/eval/: __init__.py
tests/integration/: __init__.py  test_ask_back_callback.py  test_catalog_loading.py  test_l1_router.py  test_orchestrator.py  test_pipeline_e2e.py
tests/security/: test_l5_prompt_injection.py
tests/unit/: __init__.py  test_l1_identity.py  test_l1_prompt_injection.py  test_l2_eligibility.py  test_l2_prompt_injection.py  test_l3_level.py  test_l3_prompt_injection.py  test_l4_prompt_injection.py  test_l4_timeline.py  test_l5_synthesizer.py  test_ranking.py  test_resource_catalog.py  test_web_search.py
writeup/: ASCII_DIAGRAMS.md  KAGGLE_SUBMISSION.md  VIDEO_STORYBOARD.md  WRITEUP.md  WRITEUP_KAGGLE.md  cover.pptx  kaggle_competition_brief.md
