[project]
name = "lumi"
version = "0.1.0"
description = "Lumi — a multi-agent system that helps students worldwide find free AI learning resources."
authors = [
    {name = "kannch8765", email = "105340539+kannch8765@users.noreply.github.com"},
]
license = {text = "MIT"}

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "mcp[cli]>=1.24.0,<2.0.0",  # ADK 2.2.0 passes sampling_capabilities kwarg; mcp <1.24 lacks it
    "pydantic>=2.5.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "gcsfs>=2024.11.0",
]

# Python 3.13 is intentionally excluded: the semgrep 1.100+ dev
# dependency has a pre-existing opentelemetry-sdk conflict on
# 3.13/emscripten markers that makes `uv lock` unsolvable. We
# currently use 3.11 in dev + 3.12 in Cloud Run Dockerfile, so
# 3.13 is not required.
requires-python = ">=3.11,<3.13"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pre-commit-hooks>=5.0.0,<6.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]
# NOTE: semgrep is NOT in any pyproject dep group because
# semgrep 1.100+ has a pre-existing opentelemetry-sdk pin
# conflict with mcp>=1.24 that ``uv lock`` cannot resolve.
# pre-commit installs semgrep into its own isolated env
# (see ``.pre-commit-config.yaml``'s ``additional_dependencies``)
# so it doesn't pollute the project venv. If you need to run
# semgrep outside pre-commit, install it ad hoc:
#     pipx install semgrep
#     # or
#     uv tool install semgrep
# eval group intentionally omitted — Lumi uses its own
# tests/integration/test_pipeline_e2e.py for E2E (marked
# @pytest.mark.manual), not ADK's built-in eval framework.
# google-adk[eval] + google-cloud-aiplatform[evaluation] pulled in
# opentelemetry-sdk pin conflicts with mcp>=1.24 that we cannot
# resolve, so we use our own E2E suite.

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# uv requires >= 0.5 for the [tool.uv] config block to be honored.
[tool.uv]
required-version = ">=0.5.0"
# Only ``dev`` is installed by default (via ``uv sync`` /
# ``uv add``). ``lint`` (semgrep, ty, codespell) and ``eval``
# (ADK's eval framework) are opt-in via ``uv sync --group lint``
# / ``--group eval``. This keeps the lock resolvable: semgrep
# 1.100+ has a pre-existing opentelemetry-sdk pin conflict with
# mcp>=1.24 that is unsolvable on Python 3.11+ (see commit
# d96f092 for the investigation trail).
default-groups = ["dev"]


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "manual: end-to-end tests that call real LLM APIs (consume quota, never run in CI by default)",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend"]
